# html/src/Api.php
@@ -14,7 +14,7 @@ return function (Router $router) {
     /***************************************************ROTAS DENTRO DA APLICAÇÃO, PASSAM PELO LOG***************************************************/
     /************************************************************************************************************************************************/
     /************************************************************************************************************************************************/
-    $router->get('/api', function () {
+    $router->get('/api/on', function () {
         return new \App\Core\Http\DefaultResponse(statusCode: 200, message: 'API ON :)');
     });
 
